# AmazonScraper

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: test_scraping.py
app/api/: routes.py
app/api/endpoints/: categories.py  deals.py  products.py  scrape.py
app/database/: database_manager.py
app/frontend/: app.py
app/model/: schemas.py
app/scraper/: BaseScraper.py  CategoryScraper.py  ProductScraper.py  amazon_scraper.py
app/utils/: logger.py
